# DarboBirza

./: AptarnaujantisPersonalas.cpp  AptarnaujantisPersonalas.h  Asmuo.cpp  Asmuo.h  Bedarbis.cpp  Bedarbis.h  CMakeLists.txt  Darbdavys.cpp  Darbdavys.h  DarboBirza.cpp  DarboBirza.h  DarboPasiulymas.cpp  DarboPasiulymas.h  Darbuotojas.cpp  Darbuotojas.h  Database.cpp  Database.h  Valytojas.cpp  Valytojas.h  main.cpp
